<resources>
    <string name="APP______res_0x7f120000">APP初始化异常</string>
    <string name="OTA________res_0x7f120001">OTA服务初始化失败</string>
    <string name="Playback_failed">播放失败</string>
    <string name="Step1_______res_0x7f120003">Step1: 选择升级文件</string>
    <string name="Stepper">Stepper</string>
    <string name="_h_min">%1$d hours %2$d minutes</string>
    <string name="_n_cm">%1$dcm</string>
    <string name="_n_inch">%1$d inch</string>
    <string name="_n_kg">%1$d kg</string>
    <string name="_n_km_hour">%d km/h</string>
    <string name="_n_medals">Total %d pieces</string>
    <string name="_n_mi_hour">%d mi/h</string>
    <string name="_n_ml">%dml</string>
    <string name="_n_pound">%1$d lb</string>
    <string name="a_fat">SFat</string>
    <string name="a_key_start">One button opens</string>
    <string name="a_thin">SThin</string>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="about">About</string>
    <string name="abulm">Photo album</string>
    <string name="access_background_location_permission">Background location permissions</string>
    <string name="access_coarse_location_permission">Coarse location permission</string>
    <string name="access_fine_location_permission">Fine location permission</string>
    <string name="access_location_extra_commands_permission">Access location extra commands permission</string>
    <string name="access_network_state_permission">Access network state permission</string>
    <string name="access_wifi_state_permission">Access Wi-Fi state permission</string>
    <string name="activity_recognition_permission">Activity recognition permission</string>
    <string name="add_contract">Add Contact</string>
    <string name="add_files_first">Please add files first</string>
    <string name="add_new_device">Add device</string>
    <string name="adjust_ble_mtu">Adjust MTU</string>
    <string name="adjust_mtu">Adjust the MTU</string>
    <string name="ages">Age</string>
    <string name="agree">Agree</string>
    <string name="ai_dialogue_record">AI Dialogue Record</string>
    <string name="album_permission_required">Album access permission required to select images</string>
    <string name="album_permission_required_for_video">Album access permission required to select videos and images</string>
    <string name="alpine_skiing">Alpine skiing</string>
    <string name="already_close_save_mode">Has closed power mode!</string>
    <string name="already_exist_contract">Contact already exists</string>
    <string name="amap_app_id">47412141a68c549d9cffb706cee23695</string>
    <string name="american_football">American football</string>
    <string name="and">and</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="app_manual">APP Manual</string>
    <string name="app_name">SuperBand</string>
    <string name="app_no_install">Application not installed!</string>
    <string name="app_notifi_opened">The notice has been opened!</string>
    <string name="app_version">Application Version</string>
    <string name="app_version_number">APP version</string>
    <string name="app_welcome">Welcome to Snapdrop</string>
    <string name="app_welcome_summary">1. Open snapdrop.net or the Snapdrop app on any other device in your local WiFi network.\n2. Tap on the device you want to share the file(s) with.\n3. Done! The file(s) will be sent…</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="archery">Archery</string>
    <string name="arm_steps_label">Number of steps target (step)</string>
    <string name="australian_rules_football">Australian rules football</string>
    <string name="auto_start">Self-start permission</string>
    <string name="auto_test">Automated Test OTA</string>
    <string name="auto_test_fail_reconnect">The %1$dth update is failed and the device is being connected back…</string>
    <string name="auto_test_ota">Auto OTA</string>
    <string name="auto_test_ota_tip">The OTA test is being automated. Please wait for the test to end</string>
    <string name="auto_test_range">Please be in the range of 1 to 999</string>
    <string name="auto_test_reconnect">The %1$dth update is complete and the device is being connected back…</string>
    <string name="automated_test_process">Automated test process</string>
    <string name="automatic_heart_rate">Automatic heart rate measurement</string>
    <string name="avi_video_not_exist">AVI video file does not exist, please reprocess</string>
    <string name="avi_video_not_exist_error">AVI video file does not exist, please reprocess</string>
    <string name="back_permission_warn">Please open the following permissions, safe and effective to prevent the APP from being misunderstood</string>
    <string name="badminton">Badminton</string>
    <string name="baji_protocol_manager_not_initialized">baji-protocol manager not initialized</string>
    <string name="ballet">Ballet</string>
    <string name="banner_adapter_null_error">Adapter is NULL!</string>
    <string name="baseball">Baseball</string>
    <string name="basketball">Basketball</string>
    <string name="battery_low_not_update_ota">If the power is too low, please ensure that the power is sufficient.</string>
    <string name="battery_stats_permission">Battery stats permission</string>
    <string name="bike">Bike</string>
    <string name="bike_total_km">Total mileage of cycling</string>
    <string name="bk_ota_update_tips">If you have no response for a long time to upgrade, try restart the bracelet / watch or restart the mobile phone system Bluetooth and upgrade</string>
    <string name="ble_filter">Filter name</string>
    <string name="ble_mode">BLE Mode</string>
    <string name="ble_paired_device">BLE Paired Device</string>
    <string name="blue_disabled">蓝牙已禁用</string>
    <string name="bluetooth_admin_permission">Bluetooth admin permission</string>
    <string name="bluetooth_advertise">Bluetooth broadcast permissions</string>
    <string name="bluetooth_connect">Bluetooth connection permissions</string>
    <string name="bluetooth_connection">Bluetooth Base Connection</string>
    <string name="bluetooth_enable_required">Bluetooth needs to be enabled to scan for devices</string>
    <string name="bluetooth_not_available">Bluetooth not available</string>
    <string name="bluetooth_not_connected">Bluetooth not connected, please connect device first</string>
    <string name="bluetooth_not_connected_error">Bluetooth not connected, please connect device first</string>
    <string name="bluetooth_not_enabled_error">Bluetooth is not enabled, please enable Bluetooth first</string>
    <string name="bluetooth_not_initialized">Bluetooth not initialized, please restart the app</string>
    <string name="bluetooth_not_initialized_restart">Bluetooth not initialized, please restart the app</string>
    <string name="bluetooth_pairing_manager_attempting_connection">Attempting to connect…</string>
    <string name="bluetooth_pairing_manager_cancel">Cancel</string>
    <string name="bluetooth_pairing_manager_cannot_get_br_address">Cannot get current device BR address</string>
    <string name="bluetooth_pairing_manager_cannot_get_context">Cannot get Context, cannot show dialog</string>
    <string name="cancel">cancel</string>
    <string name="choise_from_ablum">Select from album</string>
    <string name="cm">cm</string>
    <string name="email_addr">Mailbox login</string>
    <string name="email_register">Email registration</string>
    <string name="feedback_feedback">Feedback</string>
    <string name="forget_password">Forget the password</string>
    <string name="inch">inch</string>
    <string name="kg">kg</string>
    <string name="lb">lb</string>
    <string name="modify_pwd">Change Password</string>
    <string name="my_complish">My achievements</string>
    <string name="my_week_month_report">My weekly and monthly reports</string>
    <string name="name">Name</string>
    <string name="num">Number</string>
    <string name="ok">Ok</string>
    <string name="pause_use">Refuse</string>
    <string name="permission_tips_content">Please read carefully and fully understand the terms of the user privacy agreement. Including but not limited to: in order to provide you with Bluetooth communication, content sharing and other services. We need to collect your device information, operation log and other personal information. You can view, change, delete personal information and manage your authorization in settings. You can read the %1$s and %2$s for details. If you agree, please click agree to accept our service.</string>
    <string name="please_input_correct_email_addr">Please enter the correct mailbox</string>
    <string name="please_input_correct_num">Please enter the correct phone number</string>
    <string name="please_input_nickname">Please enter a nickname</string>
    <string name="please_input_pwd">Please input a password</string>
    <string name="please_input_pwd_agin">Please enter your password again</string>
    <string name="please_input_your_email">Please enter your email</string>
    <string name="psd_already_send_info">Please check your new password in your inbox</string>
    <string name="register">register</string>
    <string name="send_pwd">Send a password</string>
    <string name="take_picture">Photograph</string>
    <string name="user_profile_txt">User Profile</string>
    <string name="user_protocol">User Protocol</string>
    <string name="wechat_sport">WeChat movement</string>
    <string name="week_0">Sun</string>
    <string name="week_1">Mon</string>
    <string name="week_2">Tue</string>
    <string name="week_3">Wed</string>
    <string name="week_4">Thu</string>
    <string name="week_5">Fri</string>
    <string name="week_6">Sa</string>
    <string name="___res_0x7f120699">取消</string>
    <string name="_____res_0x7f1206a6">文件选择</string>
    <string name="______res_0x7f1206a7">服务器下载</string>
    <string name="_____res_0x7f1206a8">本地文件</string>
    <string name="_______res_0x7f1206aa">本地文件管理</string>
</resources>