<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="horizontal"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layoutDirection="ltr">
    <TextView
        android:text="@string/week_1"
        style="@style/sign_week_text_style"/>
    <TextView
        android:text="@string/week_2"
        style="@style/sign_week_text_style"/>
    <TextView
        android:text="@string/week_3"
        style="@style/sign_week_text_style"/>
    <TextView
        android:text="@string/week_4"
        style="@style/sign_week_text_style"/>
    <TextView
        android:text="@string/week_5"
        style="@style/sign_week_text_style"/>
    <TextView
        android:text="@string/week_6"
        style="@style/sign_week_text_style"/>
    <TextView
        android:text="@string/week_0"
        style="@style/sign_week_text_style"/>
</LinearLayout>
