<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:paddingLeft="12dp"
    android:paddingTop="@dimen/dp_20"
    android:paddingRight="12dp"
    android:paddingBottom="@dimen/dp_20"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="12dp"
    style="@style/common_cardview_style">
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/tv_personal_info"
            android:text="@string/user_profile_txt"
            android:drawableLeft="@mipmap/my_ped"
            style="@style/mine_cardview2_tv1_style"/>
        <View style="@style/mine_cardview2_line_style"/>
        <TextView
            android:id="@+id/tv_my_week_month_report"
            android:text="@string/my_week_month_report"
            android:drawableLeft="@mipmap/my_mwn"
            style="@style/mine_cardview2_tv1_style"/>
        <View style="@style/mine_cardview2_line_style"/>
        <TextView
            android:id="@+id/tv_my_complish"
            android:text="@string/my_complish"
            android:drawableLeft="@mipmap/my_acm"
            style="@style/mine_cardview2_tv1_style"/>
        <View style="@style/mine_cardview2_line_style"/>
        <TextView
            android:id="@+id/tv_modify_pwd"
            android:visibility="gone"
            android:text="@string/modify_pwd"
            android:drawableLeft="@mipmap/my_cpa"
            style="@style/mine_cardview2_tv1_style"/>
        <View
            android:id="@+id/space_modify_psd"
            android:visibility="gone"
            style="@style/mine_cardview2_line_style"/>
        <TextView
            android:id="@+id/tv_about"
            android:text="@string/about"
            android:drawableLeft="@mipmap/my_aus"
            style="@style/mine_cardview2_tv1_style"/>
        <View
            android:id="@+id/divider_wechat"
            android:visibility="gone"
            style="@style/mine_cardview2_line_style"/>
        <TextView
            android:id="@+id/tv_wechat"
            android:visibility="gone"
            android:text="@string/wechat_sport"
            android:drawableLeft="@mipmap/my_wm_icon"
            style="@style/mine_cardview2_tv1_style"/>
        <View style="@style/mine_cardview2_line_style"/>
        <TextView
            android:id="@+id/tv_feedback"
            android:text="@string/feedback_feedback"
            android:drawableLeft="@mipmap/my_feedb"
            style="@style/mine_cardview2_tv1_style"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>
