<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layoutDirection="ltr">
    <include layout="@layout/include_title"/>
    <LinearLayout
        android:orientation="vertical"
        android:paddingLeft="25dp"
        android:paddingRight="25dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="60dp">
        <TextView
            android:text="@string/forget_password"
            style="@style/login_bold_tv_style"/>
        <TextView
            android:textSize="15sp"
            android:textColor="#ff2e303b"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:text="@string/please_input_your_email"/>
        <xfkj.fitpro.view.XEditText
            android:id="@+id/edt_email_addr"
            android:layout_marginLeft="0dp"
            android:layout_marginTop="29dp"
            android:layout_marginRight="0dp"
            android:hint="@string/please_input_correct_email_addr"
            android:drawableLeft="@mipmap/signin_mailbox"
            android:inputType="textEmailAddress"
            style="@style/login_acount_edt_style"/>
        <androidx.appcompat.widget.AppCompatButton
            android:layout_gravity="center_horizontal"
            android:id="@+id/btn_send_pwd"
            android:layout_marginTop="52dp"
            android:text="@string/send_pwd"
            style="@style/login_btn_style_2"/>
        <TextView
            android:textSize="12sp"
            android:textColor="#ffa4a9ac"
            android:layout_gravity="center_horizontal"
            android:id="@+id/tv_already_send_psd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/psd_already_send_info"/>
    </LinearLayout>
</LinearLayout>
