<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:tag="layout/activity_register_0"
    android:background="@color/bg_color"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <include layout="@layout/include_title"/>
    <ScrollView style="@style/login_of_acount_srcoll_style">
        <LinearLayout
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:gravity="left"
                android:text="@string/email_register"
                style="@style/login_bold_tv_style"/>
            <EditText
                android:id="@+id/edt_email_addr"
                android:layout_marginTop="29dp"
                android:hint="@string/email_addr"
                android:inputType="textEmailAddress"
                style="@style/login_register_edt_style"/>
            <EditText
                android:id="@+id/edt_pwd"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:minHeight="49dp"
                android:hint="@string/please_input_pwd"
                android:maxLength="20"
                android:inputType="textPassword"
                style="@style/login_register_edt_style"/>
            <EditText
                android:id="@+id/edt_pwd_agin"
                android:layout_height="wrap_content"
                android:layout_marginTop="9dp"
                android:minHeight="49dp"
                android:hint="@string/please_input_pwd_agin"
                android:maxLength="20"
                android:inputType="textPassword"
                style="@style/login_register_edt_style"/>
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btn_register"
                android:layout_marginTop="30dp"
                android:text="@string/register"
                style="@style/login_btn_style_2"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
