<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:background="@color/white"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:textSize="16sp"
        android:textStyle="bold"
        android:textColor="@color/textColorBlack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_contract"/>
    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp">
        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/textColorBlack"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:maxLength="20"/>
        <EditText
            android:ellipsize="end"
            android:id="@+id/edt_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_nickname"
            android:maxLines="1"
            android:inputType="text"
            android:layout_marginStart="30dp"
            style="@style/sync_contract_edt_style"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp">
        <TextView
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/textColorBlack"
            android:layout_width="60dp"
            android:layout_height="wrap_content"
            android:text="@string/num"
            android:maxLength="20"/>
        <EditText
            android:ellipsize="end"
            android:id="@+id/edt_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/please_input_correct_num"
            android:maxLines="1"
            android:layout_weight="1"
            android:inputType="phone"
            android:layout_marginStart="30dp"
            style="@style/sync_contract_edt_style"/>
        <ImageButton
            android:id="@+id/import_contract"
            android:background="@null"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/equipment_fc_ab_icon"
            android:layout_marginStart="@dimen/dp_10"/>
    </LinearLayout>
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_45">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_cancel"
            android:background="@drawable/shape_health_report_remt"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:text="@string/cancel"
            android:layout_marginEnd="15dp"/>
        <androidx.appcompat.widget.AppCompatButton
            android:textColor="@color/white"
            android:id="@+id/btn_ok"
            android:background="@drawable/selector_login_btn"
            android:layout_width="145dp"
            android:layout_height="40dp"
            android:text="@string/ok"
            android:layout_marginStart="15dp"/>
    </LinearLayout>
</LinearLayout>
