<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@drawable/bg_select"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <RelativeLayout
        android:id="@+id/rl_title"
        android:background="@drawable/bg_select_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:textColor="#ffffff"
            android:padding="10dp"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:text="@string/_____res_0x7f1206a6"
            android:layout_centerInParent="true"/>
    </RelativeLayout>
    <LinearLayout
        android:orientation="vertical"
        android:background="@color/white"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:gravity="center"
            android:id="@+id/tv_file_local_manage"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_______res_0x7f1206aa"/>
        <View
            android:background="@color/dark_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:gravity="center"
            android:id="@+id/tv_file_local_fixed"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/_____res_0x7f1206a8"/>
        <View
            android:background="@color/dark_gray"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>
        <TextView
            android:textSize="16sp"
            android:textColor="@color/dark_gray"
            android:gravity="center"
            android:id="@+id/tv_file_server"
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/______res_0x7f1206a7"/>
    </LinearLayout>
    <Button
        android:textSize="16sp"
        android:textColor="@color/white"
        android:id="@+id/btn_cancel"
        android:background="@drawable/bg_select_bottom"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text="@string/___res_0x7f120699"
        style="?android:attr/buttonBarButtonStyle"/>
</LinearLayout>
