<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:background="@color/transparent"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:paddingLeft="10dp"
        android:paddingTop="10dp"
        android:paddingRight="10dp"
        android:paddingBottom="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1">
        <TextView
            android:textSize="20sp"
            android:textColor="@color/textColorBlack"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/user_protocol"/>
        <TextView
            android:textSize="15sp"
            android:textColor="@color/textColorBlack"
            android:id="@+id/tv_content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:maxHeight="300dp"
            android:text="@string/permission_tips_content"/>
    </LinearLayout>
    <LinearLayout
        android:orientation="horizontal"
        android:id="@+id/ll_bottom"
        android:layout_width="match_parent"
        android:layout_height="35dp">
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/cancel_button"
            android:background="@drawable/sweet_default_button_left_background"
            android:text="@string/pause_use"
            style="@style/dialog_blue_button"/>
        <View
            android:background="@color/line_color"
            android:layout_width="1px"
            android:layout_height="match_parent"/>
        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/confirm_button"
            android:background="@drawable/sweet_default_button_right_background"
            android:text="@string/agree"
            style="@style/dialog_blue_button"/>
    </LinearLayout>
</LinearLayout>
